--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -74,7 +74,7 @@
     },
     "testimonials": {
       "title": "What our clients say",
-      "quote": "VISTA LAW provided exceptional legal guidance during our merger. Their attention to detail and strategic foresight were instrumental in our success. I cannot recommend them highly enough.",
+      "quote": "Vista Law provided clear, practical advice and kept us informed at every stage. Their responsiveness and attention to detail made a real difference.",
       "whyChooseUs": "Why Choose Us?",
       "provenTrackRecord": {
         "title": "Proven Track Record",
