--- a/src/assets/i18n/ko.json
+++ b/src/assets/i18n/ko.json
@@ -35,13 +35,13 @@
       "badge": "신뢰할 수 있는 법률 파트너",
       "title": "으로 고객의 권리를 지켜드립니다",
       "titleHighlight1": "정직",
-      "titleHighlight2": "정확함",
+      "titleHighlight2": "전문성",
       "subtitle": "복잡한 소송과 기업 법률 문제에 정통한 전문가들이, 결정적인 순간에 명확한 방향과 적극적인 법률 대응을 제공합니다",
       "scheduleConsultation": "상담 예약",
       "viewPracticeAreas": "업무 분야 보기",
       "promptClientResponse": "신속한 고객 대응",
       "experiencedOntarioLawyers": "온타리오 법률에 정통한 경험 많은 변호사들",
-      "excellenceInEveryCase": "모든 사건에 대한 우수성.",
+      "excellenceInEveryCase": "모든 사건을 신중하고 책임감 있게 다룹니다.",
       "yearsOfExperience": "20년 이상의 경험."
     },
     "trustIndicators": {
@@ -70,11 +70,12 @@
     },
     "attorneys": {
       "title": "파트너 소개",
-      "subtitle": "정의 실현에 대한 열정과 뛰어난 전문성을 바탕으로, 우리 팀은 각 사건에 풍부한 경험과 노하우를 제공합니다."
+      "subtitle": "최선의 결과를 이끌어내는 데 집중하며, 각 사건에 풍부한 경험과 전문성을 바탕으로 대응합니다."
     },
     "testimonials": {
       "title": "고객 평가",
-      "quote": "VISTA LAW은 합병 과정에서 뛰어난 법률 자문을 제공해 주었습니다. 세심한 대응과 전략적 통찰 덕분에 성공적인 결과를 얻을 수 있었습니다. 강력히 추천합니다.",
+      "quote": "Vista Law는 전 과정에 걸쳐 명확하고 실질적인 조언을 제공하며, 진행 상황을 지속적으로 안내해 주었습니다. 신속한 대응과 세심한 업무 처리 덕분에 큰 신뢰를 느낄 수 있었습니다",
+      "whyChooseUs": "저희를 선택해야 하는 이유?",
       "provenTrackRecord": {
         "title": "검증된 성과",
         "description": "복잡한 합의 과정에서 고객을 위해 3,000만 달러 이상의 금액을 회수했습니다."
@@ -90,7 +91,7 @@
     },
     "cta": {
       "title": "사건 상담을 준비하고 계신가요?",
-      "subtitle": "오늘 바로 연락하여 무료·비밀 상담을 받아보세요. 고객이 법적 문제를 자신 있게 해결할 수 있도록 도와드립니다",
+      "subtitle": "오늘 바로 연락하여 무료 상담을 받아보세요. 상담 내용은 철저히 보호되며, 법적 문제를 자신 있게 해결할 수 있도록 도와드립니다.",
       "bookAppointment": "예약하기",
       "phone": "(905) 886-3339"
     }
