--- a/src/assets/i18n/ko.json
+++ b/src/assets/i18n/ko.json
@@ -22,7 +22,7 @@
   },
   "footer": {
     "companyName": "비스타 로펌",
-    "description": "성실과 결과에 대한 헌신으로 최고 수준의 법률 서비스를 제공합니다. 우리는 귀하를 위해 싸우기 위해 여기 있습니다.",
+    "description": "성실함과 결과에 대한 책임감을 바탕으로 수준 높은 법률 서비스를 제공합니다. 언제나 고객의 이익을 최우선으로 생각하며 함께하겠습니다.",
     "quickLinks": "빠른 링크",
     "legal": "법적 고지",
     "contactUs": "연락처",
