--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -196,8 +196,8 @@
       "meetOurTeam": "Meet Our Team"
     },
     "grid": {
-      "title": "Specialized Practice Areas",
-      "subtitle": "We offer a wide range of legal services to help you navigate complex legal landscapes."
+      "title": "Our Practice Areas",
+      "subtitle": "Our team of experts offer the following legal services."
     },
     "areas": {
       "corporateBusiness": {
