--- a/src/assets/i18n/ko.json
+++ b/src/assets/i18n/ko.json
@@ -48,7 +48,7 @@
       "title": "저희 Vista 의 철학 입니다.",
       "titleHighlight1": "비전",
       "titleHighlight2": "열정",
-      "subtitle": "복잡한 소송과 기업 법률 문제에 정통한 전문가들이, 결정적인 순간에 명확한 방향과 적극적인 법률 대응을 제공합니다",
+      "subtitle": "저희 변호사들은 국제 기업부터 중소기업 소유주까지 다양한 고객 그룹을 성공적으로 대변해 왔습니다.",
       "scheduleConsultation": "상담 예약",
       "viewPracticeAreas": "업무 분야 보기",
       "promptClientResponse": "신속한 고객 대응",
@@ -68,7 +68,7 @@
         "description": "법인 설립, 사업체 인수 및 매각, 주주 계약, 기업 구조 조정, 기업 지배 구조, 비즈니스 컨설팅."
       },
       "civilLitigation": {
-        "title": "민사·상사 소송",
+        "title": "민사 및 상업 소송",
         "description": "계약 위반, 과실, 허위 진술, 채권 추심, 판결 집행, 압류, 강제 매각 절차 등의 민사 소송."
       },
       "realEstate": {
@@ -76,8 +76,8 @@
         "description": "주거 및 상업용 부동산 거래, 제 3 금융권, 콘도 구매/판매, 토지 개발, 카티지."
       },
       "leasing": {
-        "title": "임대차",
-        "description": "상업용, 산업용, 주거용 임대차와 계약 협상, 임대인·임차인 법률 문제까지 맞춤형 솔루션을 제공합니다."
+        "title": "리스",
+        "description": "상업, 산업 및 주거용 임대차, 임대차 계약서 작성 및 협상, 임대인 및 임차인 법률."
       }
     },
     "attorneys": {
@@ -103,7 +103,7 @@
     },
     "cta": {
       "title": "사건 상담을 준비하고 계신가요?",
-      "subtitle": "지금 바로 문의하시면 비밀이 보장된 상담을 통해 법적 문제를 차분하고 명확하게 안내해 드립니다.",
+      "subtitle": "지금 바로 문의하시면 비밀이 보장된 상담으로 법적 문제를 명확히 안내해 드립니다.",
       "bookAppointment": "예약하기",
       "phone": "(905) 886-3339"
     }
@@ -190,14 +190,14 @@
   },
   "practiceAreas": {
     "hero": {
-      "title": "전문 분야",
+      "title": "업무 분야",
       "subtitle": "전문적인 법률 대리 서비스를 통해 복잡한 법률 환경을 명확하게 이해하고, 고객님의 상황에 맞는 종합적인 해결책을 제공합니다.",
       "viewAllPractices": "모든 업무 분야 보기",
       "meetOurTeam": "팀 소개"
     },
     "grid": {
-      "title": "전문 업무 분야",
-      "subtitle": "복잡한 법률 환경을 탐색할 수 있도록 다양한 법률 서비스를 제공합니다."
+      "title": "업무 분야",
+      "subtitle": "Vista는 다음과 같은 법률 서비스를 제공합니다."
     },
     "areas": {
       "corporateBusiness": {
@@ -209,11 +209,11 @@
         "description": "주거 및 상업용 부동산 거래, 제 3 금융권, 콘도 구매/판매, 토지 개발, 카티지."
       },
       "civilLitigation": {
-        "title": "민사 및 상사 소송",
+        "title": "민사 및 상업 소송",
         "description": "계약 위반, 과실, 허위 진술, 채권 추심, 판결 집행, 압류, 강제 매각 절차 등의 민사 소송."
       },
       "leasing": {
-        "title": "임대차",
+        "title": "리스",
         "description": "상업, 산업 및 주거용 임대차, 임대차 계약서 작성 및 협상, 임대인 및 임차인 법률."
       },
       "employmentLaw": {
@@ -221,7 +221,7 @@
         "description": "고용 계약서 초안 작성 및 협상, 부당 해고, 권고사직, 직장 내 괴롭힘."
       },
       "willsEstates": {
-        "title": "유언 및 상속",
+        "title": "유언장 및 유산",
         "description": "유언장 및 위임장 작성, 상속 계획, 유언 검인."
       },
       "dentalHealth": {
@@ -275,10 +275,10 @@
     "form": {
       "title": "문의하기",
       "subtitle": "아래 양식을 작성해 주시면 팀 구성원이 곧 연락드리겠습니다.",
-      "name": "성명",
-      "namePlaceholder": "홍길동",
-      "email": "이메일 주소",
-      "emailPlaceholder": "hong@example.com",
+      "name": "이름",
+      "namePlaceholder": "이름이 무엇인가요?",
+      "email": "이메일",
+      "emailPlaceholder": "이메일이 무엇인가요?",
       "phone": "전화번호",
       "phonePlaceholder": "(905) 886-3339",
       "subject": "문의 분야",
@@ -303,7 +303,7 @@
       "subjects": {
         "corporate": "기업 및 비즈니스",
         "realEstate": "부동산",
-        "litigation": "민사 및 상사 소송",
+        "litigation": "민사 및 상업 소송",
         "employment": "고용법",
         "wills": "유언 및 상속",
         "dental": "치과 / 보건법",
